--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 <!--        </a>-->
         <ul class="nav-links">
             <li><a href="#home">Mājas</a></li>
-            <li><a href="#section1">Sekcija 1</a></li>
-            <li><a href="#section2">Sekcija 2</a></li>
-            <li><a href="#section3">Sekcija 3</a></li>
-            <li><a href="#section4">Sekcija 4</a></li>
+            <li><a href="#section1">Juglas ezers</a></li>
+            <li><a href="#section2">Juglas centrs</a></li>
+            <li><a href="#section3">Akropole alfa</a></li>
+            <li><a href="#section4">Brīvības piemineklis</a></li>
+            <li><a href="#section5">Latvijas Universitāte</a></li>
         </ul>
         <div class="mode-toggle">
             <button id="dark-mode">Tumšs</button>
@@ -30,10 +31,11 @@
     <div class="side-panel" id="sidePanel">
         <ul>
             <li><a href="#home" onclick="toggleMenu()">Mājas</a></li>
-            <li><a href="#section1" onclick="toggleMenu()">Sekcija 1</a></li>
-            <li><a href="#section2" onclick="toggleMenu()">Sekcija 2</a></li>
-            <li><a href="#section3" onclick="toggleMenu()">Sekcija 3</a></li>
-            <li><a href="#section4" onclick="toggleMenu()">Sekcija 4</a></li>
+            <li><a href="#section1" onclick="toggleMenu()">Juglas ezers</a></li>
+            <li><a href="#section2" onclick="toggleMenu()">Juglas centrs</a></li>
+            <li><a href="#section3" onclick="toggleMenu()">Akropole alfa</a></li>
+            <li><a href="#section4" onclick="toggleMenu()">Brīvības piemineklis</a></li>
+            <li><a href="#section5" onclick="toggleMenu()">Latvijas Universitāte</a></li>
 <!--            <li><button id="dark-mode-side" onclick="setDarkMode()">Tumšs</button></li>-->
 <!--            <li><button id="light-mode-side" onclick="setLightMode()" disabled>Gaišs</button></li>-->
         </ul>
