--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         <img src="aa_logo_tr_2.png" alt="Logo" id="logo">
 <!--        </a>-->
         <ul class="nav-links">
-            <li><a href="#home">Mājas</a></li>
-            <li><a href="#section1">Juglas ezers</a></li>
+            <li><a href="#section1">Ezers</a></li>
             <li><a href="#section2">Juglas centrs</a></li>
-            <li><a href="#section3">Akropole alfa</a></li>
+            <li><a href="#section3">Akropole</a></li>
             <li><a href="#section4">Brīvības piemineklis</a></li>
             <li><a href="#section5">Latvijas Universitāte</a></li>
         </ul>
