--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
     <div class="side-panel" id="sidePanel">
         <ul>
-            <li><a href="#home" onclick="toggleMenu()">Mājas</a></li>
+            <!--  <li><a href="#home" onclick="toggleMenu()">Mājas</a></li> -->
             <li><a href="#section1" onclick="toggleMenu()">Juglas ezers</a></li>
             <li><a href="#section2" onclick="toggleMenu()">Juglas centrs</a></li>
             <li><a href="#section3" onclick="toggleMenu()">Akropole alfa</a></li>
