--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@
                 Akropole Alfa ir vieta, kas ir pilna ar dzīvi un kustību. Tā ir vieta, kur esmu ieguvis daudz atmiņu un kur esmu pavadījis daudz laika kopā ar savu ģimeni. Es atceros, kā mēs bieži gājām uz kino, un kā mēs vienmēr baudījām to patīkamo sajūtu, kad esam kopā.
             </p>
             <p>
-            Pēc treniņiem es vienmēr paspēju ātri ieskriet veikalā, lai nopirktu kaut ko garšīgu, vai paskatīties, kas jauns ir pārdošanā citos veikalos. Ziemas laikā man patika aiziet apskatīties eglītes, kas tiek pārdotas te pat blakus veikalam. Šī vieta ir īpaša, jo tā rada patīkamu vidi, it īpaši, kad esi tur kopā ar kādu.
+            	Pēc treniņiem es vienmēr paspēju ātri ieskriet veikalā, lai nopirktu kaut ko garšīgu, vai paskatīties, kas jauns ir pārdošanā citos veikalos. Ziemas laikā man patika aiziet apskatīties eglītes, kas tiek pārdotas te pat blakus veikalam. Šī vieta ir īpaša, jo tā rada patīkamu vidi, it īpaši, kad esi tur kopā ar kādu.
             </p>
             <p>
-            Protams, jāuzmanās, lai nepaspēj pārāk daudz laika patērēt šeit, jo vienmēr ir iespējams kaut ko jaunu un interesantu ieraudzīt. Es atceros reizi, kad Alfā bija notikuši plūdi, bet vismaz viss tika savest kārtībā.
+            	Protams, jāuzmanās, lai nepaspēj pārāk daudz laika patērēt šeit, jo vienmēr ir iespējams kaut ko jaunu un interesantu ieraudzīt. Es atceros reizi, kad Alfā bija notikuši plūdi, bet vismaz viss tika savest kārtībā.
             </p>
             <p>
-            Pašlaik, ja man ir laiks, es gandrīz katru reizi izmantoju šo maršruta ceļu, lai, pirmkārt, apskatītos cikos būs man nepieciešamais transports, jo pie Alfas ir ekrāns, kas parāda precīzi pēc cik minūtēm būs man nepieciešamais transporta līdzeklis, un, ja man būs nedaudz jāpagaida, tad labprāt izdomāju aizskriet paskatīties, kas interesants notiek Alfā.
+            	Pašlaik, ja man ir laiks, es gandrīz katru reizi izmantoju šo maršruta ceļu, lai, pirmkārt, apskatītos cikos būs man nepieciešamais transports, jo pie Alfas ir ekrāns, kas parāda precīzi pēc cik minūtēm būs man nepieciešamais transporta līdzeklis, un, ja man būs nedaudz jāpagaida, tad labprāt izdomāju aizskriet paskatīties, kas interesants notiek Alfā.
             </p>
             <p>
-            Akropole Alfa ir vieta, kur var justies kā mājās, neatkarīgi no tā, vai esat šeit pirmo reizi vai esat šeit bijis jau simtiem reižu. Tā ir vieta, kur var justies dzīvs un baudīt katru brīdi.
+            	Akropole Alfa ir vieta, kur var justies kā mājās, neatkarīgi no tā, vai esat šeit pirmo reizi vai esat šeit bijis jau simtiem reižu. Tā ir vieta, kur var justies dzīvs un baudīt katru brīdi.
             </p>
             <button class="prev" onclick="scrollToSection('section2')">Iepriekšējā pietura</button>
             <button class="next" onclick="scrollToSection('section4')">Nākamā pietura</button>
@@ -140,16 +140,16 @@
                 Brīvības piemineklis ir viens no maniem mīļākajiem apskates objektiem. Tas ir piemineklis, kas man vienmēr ir fascinējis ar savu skaistumu un grandiozitāti. Es vienmēr esmu apbrīnojis, kā šis piemineklis tika izdomāts, kā tas tika uzcelts, un kā par to rūpējas.
             </p>
             <p>
-            Es atceros, kā es vienmēr apbrīnoju, cik spoži un skaisti tas spīd katru reizi, kad eju tam garām. Šo pieminekli vienmēr apstaigā sargi, kuri ir skaisti un drosmīgi apģērbušies, un tas rada vēl lielāku cieņu pret šo pieminekli.
+            	Es atceros, kā es vienmēr apbrīnoju, cik spoži un skaisti tas spīd katru reizi, kad eju tam garām. Šo pieminekli vienmēr apstaigā sargi, kuri ir skaisti un drosmīgi apģērbušies, un tas rada vēl lielāku cieņu pret šo pieminekli.
             </p>
             <p>
-            Blakus piemineklim atrodas ļoti skaista un sakopta daba, kur var apsēsties un to pavērot. Kamēr man ir bijis brīvā laikā, es ļoti bieži izdomāju aiziet un pasēdēt te pat blakus uz sola, lai pavērotu gan apkārtējo dabu, cilvēkus, gan pašu pieminekli.
+            	Blakus piemineklim atrodas ļoti skaista un sakopta daba, kur var apsēsties un to pavērot. Kamēr man ir bijis brīvā laikā, es ļoti bieži izdomāju aiziet un pasēdēt te pat blakus uz sola, lai pavērotu gan apkārtējo dabu, cilvēkus, gan pašu pieminekli.
             </p>
             <p>
-            Ir interesanti redzēt, ka arī tūristiem ir liela interese par to, kas šis ir par apskates objektu, un vienmēr to apbrīnot. Netālu no pieminekļa atrodas daudz restorānu, kur var aiziet paēst garšīgu ēdienu, kamēr uzturies šajā apkaimē.
+            	Ir interesanti redzēt, ka arī tūristiem ir liela interese par to, kas šis ir par apskates objektu, un vienmēr to apbrīnot. Netālu no pieminekļa atrodas daudz restorānu, kur var aiziet paēst garšīgu ēdienu, kamēr uzturies šajā apkaimē.
             </p>
             <p>
-            Šis ir viens no pirmajiem pieminekļa apskates objektiem, kas man vienmēr nāk galvā, kad parādās interese paskatīties skaistus pieminekļus. Arī ļoti brīnišķīgi ir redzēt, kā par šo pieminekli rūpējas visa Latvija.
+            	Šis ir viens no pirmajiem pieminekļa apskates objektiem, kas man vienmēr nāk galvā, kad parādās interese paskatīties skaistus pieminekļus. Arī ļoti brīnišķīgi ir redzēt, kā par šo pieminekli rūpējas visa Latvija.
             </p>
             <button class="prev" onclick="scrollToSection('section3')">Iepriekšējā pietura</button>
             <button class="next" onclick="scrollToSection('section5')">Nākamā pietura</button>
@@ -167,19 +167,19 @@
                 Latvijas Universitāte ir vieta, kas ir pilna ar zināšanām un izaugsmi. Pēdējos trīs gadus es ar prieku eju studēt šajā skaistajā ēkā. Katru reizi, kad es iznāku ārā no šīs ēkas, es jūtu, ka esmu ieguvis jaunas zināšanas, satikis jaunus cilvēkus un esmu pilns ar vēlmi turpināt savu izaugsmi.
             </p>
             <p>
-            Es ļoti uzslavēju to, cik skaista šī ēka ir gan no ārpuses, gan no iekšpuses. Zinot, cik ilgus gadus tā jau šeit stāv, es varu ieraudzīt, cik lielas rūpes ir par šo dāvanu. Man patīk tas, ka vienmēr ir iespēja ar kādu labi parunāties un būt ap pretimnākošiem cilvēkiem apkārt.
+            	Es ļoti uzslavēju to, cik skaista šī ēka ir gan no ārpuses, gan no iekšpuses. Zinot, cik ilgus gadus tā jau šeit stāv, es varu ieraudzīt, cik lielas rūpes ir par šo dāvanu. Man patīk tas, ka vienmēr ir iespēja ar kādu labi parunāties un būt ap pretimnākošiem cilvēkiem apkārt.
             </p>
             <p>
-            Lai gan iekšā logi jau sāk kļūt veci un ziemā telpās nāk iekšā liels aukstums, tas man vēl vairāk palīdz paturēt Latvijas Universitāti man atmiņā. Es atceros, kā es sēdēju telpās, mācoties un strādājot, un kā es jutu, ka esmu daļa no kaut kā lielāka.
+            	Lai gan iekšā logi jau sāk kļūt veci un ziemā telpās nāk iekšā liels aukstums, tas man vēl vairāk palīdz paturēt Latvijas Universitāti man atmiņā. Es atceros, kā es sēdēju telpās, mācoties un strādājot, un kā es jutu, ka esmu daļa no kaut kā lielāka.
             </p>
             <p>
-            Universitāte ir novietota blakus parkam, un kad man ir brīvs laiks un vēlos paelpot svaigu gaisu, es labprāt izeju ārā pasēdēt parkā. Es apbrīnoju to, cik skaista ir Latvija, un es jūtu pateicību par to, ka esmu šeit.
+            	Universitāte ir novietota blakus parkam, un kad man ir brīvs laiks un vēlos paelpot svaigu gaisu, es labprāt izeju ārā pasēdēt parkā. Es apbrīnoju to, cik skaista ir Latvija, un es jūtu pateicību par to, ka esmu šeit.
             </p>
             <button class="prev" onclick="scrollToSection('section4')">Iepriekšējā pietura</button>
         </div>
         <div class="section-image">
             <img src="latvijas-universitate.jpg" alt="Latvijas Universitāte ikdienas skaistumā" class="section-image full-width-image">
-            <p class="signature">Vienmēr patīkami doties uz uniersitāti</p>
+            <p class="signature">Vienmēr patīkami doties uz universitāti</p>
         </div>
     </section>
 
