--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="section-text">
             <h2>Juglas ezers</h2>
             <p>
-                Juglas ezers ir viens no maniem mīļākajiem apskates objektiem. Katru reizi, kad braucu garām, es apbrīnoju tā krāšnumu. Tā spēcīgie viļņi un vējš man atgādina par dabas spēku un neizsīkstošo enerģiju.
+                Juglas ezers ir pirmais un viens no maniem mīļākajiem apskates objektiem ceļā uz Latvijas Universitāti. Katru reizi, kad braucu garām, es apbrīnoju tā krāšnumu. Tā spēcīgie viļņi un vējš man atgādina par dabas spēku un neizsīkstošo enerģiju.
             </p>
             <p>
                 Siltā laikā, kad saule spīd un putni dzied, ezers rada patīkamu sajūtu. Tas ir kā miers un mierinājums, kas nāk no dabas klātbūtnes.
